Replacing hadoop-env.sh with official one.